# SocialGraphs

./: .cache
Arkiv/: OLD_Part1.ipynb
Arkiv/OLD/: pyproject.toml
Arkiv/OLD/code/: ol_enrichment.py  preprocessing.py
Arkiv/OLD/data/: raw
Arkiv/OLD/tests/: test_fetchers.py
Assignment1/: Assignment1.ipynb  List_of_mainstream_rock_performers.txt  Week1_Ex2.ipynb  _Week4_Networks3.ipynb  rock_music_graph_1.graphml
Assignment2/: Assignment2.ipynb  Bands_graph.graphml  Part1.ipynb  Part2.ipynb  Part3.ipynb  Part4.ipynb  band_genres.txt  bands_with_sentiment.graphml  song_sentiments.csv  spot_test.ipynb
HEJ/: hej hej hejk
Iben/: API_check.ipynb  Cliques.ipynb  IMDb_test.ipynb  NC_backbone_creation.ipynb  Network_mess_around.ipynb  spotify_network.tsv
Mads/: Day1_mads.ipynb  Day3_mads.ipynb  Day4_mads.ipynb  Day7.ipynb  Week7_mads.ipynb  Week_8_mads.ipynb  graph_week7.graphml  more_mess.ipynb
Noa/: Bands_graph.graphml  Bands_with_genres.graphml  List_of_mainstream_rock_performers.txt  Week1_ex1.ipynb  Week1_ex3_ NetworkX.ipynb  Week2_ex1_ex2_sparseNetworks.ipynb  Week2_ex3_Part 3: Plotting degree_distributions.ipynb  Week2_ex3_Part 3:Plotting degree_distributions.ipynb  Week2_ex4.ipynb  Week3_part1_questions.ipynb  Week3_part2_Scale-free networks.ipynb  Week4_Part1.ipynb  Week4_regEx.ipynb  Week5_.ipynb  Week6_Natural Language Processing.ipynb  Week7_.ipynb  Week7_genreExtract.ipynb  extract.py  rock_music_graph.graphml
Project/: ANALYSE_ideer.docx  Cliques.ipynb  Create_graph.ipynb  MAIN.ipynb  Network_mess_around.ipynb  Semantic_sentiment_analysis.ipynb
(+5833 files in other folders)
