[tool.poetry]
name = "social-graphs"
version = "0.1.0"
description = "A project for analyzing social graphs based on books from Project Gutenberg."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
requests = "^2.26.0"
tqdm = "^4.62.0"
scikit-learn = "^0.24.2"
networkx = "^2.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"